Fixed wrapping of text in a button used for maetrial title on materials index.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -605,3 +605,7 @@ abbr, accronym{ border-bottom: 0px !important; } /*try adding !important  after 
 .popover{
   max-width: 500px !important; /* Max Width of the popover (depending on the container!) */
 }
+// To make bootstrap button wrap button text into multiple lines
+.btn{
+  white-space:normal !important;
+}
